--- a/presentations/presentation_5.29.tex
+++ b/presentations/presentation_5.29.tex
@@ -115,7 +115,8 @@
 \frametitle{Pre-existing literature}
 
 \begin{itemize}
-\item Stuff here
+\item Literature on evidence use in policy-making, on relationship between science, researchers and policy-makers in a democracy 
+\item Existing field/audit experiments reaching out to policy-makers \hyperlink{existing}{\beamerbutton{Figure}}
 \end{itemize}
 
 \end{frame}
@@ -128,11 +129,11 @@
 \begin{itemize}
 \item Evidence standards and descriptions already adopted in federal legislation.
 \begin{itemize}
-\item Secondary Education Act, No Child Left Behind, Every Student Succeeds Act
+\item Secondary Education Act 65, No Child Left Behind 01, Every Student Succeeds Act 2015
 \end{itemize}
 \pause
 \vspace{0.5cm}
-\item Department of Education (DoE) standards.
+\item Department of Education (DoE) standards under ESSA 2015:
 \begin{itemize}
 \item Strong causal evidence
 \item Moderate causal evidence
@@ -140,7 +141,7 @@
 \item High levels of specificity covering cluster-random assignment \hyperlink{doe_cluster}{\beamerbutton{Figure}}, IVs \hyperlink{doe_iv}{\beamerbutton{Figure}}, and missingness/attrition \hyperlink{doe_missing}{\beamerbutton{Figure}}, and RDs \hyperlink{doe_rd}{\beamerbutton{Figure}}. 
 \end{itemize}
 \pause
-\item Department of Labor has adopted similar standards.
+\item Other federal agencies have adopted similar standards \hyperlink{other_agencies}{\beamerbutton{Figure}}        
 \end{itemize}
 
 \end{frame}
@@ -148,13 +149,17 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}
-\frametitle{DoE evidence standards}
+\frametitle{DoE evidence standards under ASSA 2015}
 
 \begin{center}
 \vspace{-0.85cm}
 \hspace*{-1cm}
-\includegraphics[scale=0.57]{../figs/DoE_standards.png} 
+\includegraphics[scale=0.75]{../figs/doe_tiers.png}
 \end{center}
+
+
+
+
 
 
 \end{frame}
@@ -191,6 +196,30 @@
 
 \end{frame}
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}
+\frametitle{Treatment 1, Choice of policy - descriptive statistics of DoE's database}
+
+
+\end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}
+\frametitle{Treatment 2, Information on evidence standards}
+\scriptsize
+From DoL's CLEAR database:
+\bigbreak
+\textit{"High Causal Evidence standards mean there is strong evidence that the effects estimated in this study are solely attributable to the intervention being examined. This does not necessarily mean that the study found positive impacts, only that the analysis meets high methodological standards and the causal impacts estimated, whether positive, negative, or null, are credible. Currently, only well-implemented randomized controlled trials can receive this rating"}
+
+\textit{"Low Causal Evidence standards mean there is little evidence that the effects estimated in the study are attributable to the intervention being examined, and other factors are likely to have contributed to the results. This does not imply that the study's results are not useful for some purposes, but they should be interpreted with caution. Causal studies that do not meet criteria for a high or moderate evidence rating receive this rating."}
+
+\end{frame}
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}
@@ -199,10 +228,10 @@
 \begin{itemize}
 \item Ideally: partner with a \textcolor{Cerulean}{3rd party organization} and examine: 
 \begin{enumerate} 
-\item Whether or not a \textcolor{Cerulean}{meeting was established}.
+\item Whether or not a \textcolor{Cerulean}{meeting was established}. 
 \item Seniority of the individual with whom a successful meeting was granted (as in \citet{kalla2016campaign}).
 \pause
-\item [--] May also allow us to engage in participant observation.
+\item [--] May also allow us to engage in participant observation (qualitative data)
 \end{enumerate}
 \pause
 \vspace{1cm}
@@ -210,6 +239,17 @@
 \end{itemize}
 
 \end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}
+\frametitle{Email example}
+
+Add screenshot of potential email
+
+\end{frame}
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -232,6 +272,23 @@ Heterogenous treatment effects (CATEs)
 \begin{itemize}
 \item Party, ..., ?
 \item Note preregistration, multiple comparisons, and power.
+\end{itemize}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}
+\frametitle{Power analysis assumptions}
+
+\begin{itemize}
+\item N = 535 (federal) and 1000 (state)
+\vspace{0.5cm}
+\item Low quality evidence + information provision = \textcolor{BrickRed}{-10\%}
+\item High quality evidence + no information provision = \textcolor{Emerald}{+5\%}
+\item High quality evidence + information provision = \textcolor{LimeGreen}{+12.5\%}
+\vspace{0.5cm}
+\item Standard deviation = 0.08
 \end{itemize}
 
 \end{frame}
@@ -266,28 +323,14 @@ Heterogenous treatment effects (CATEs)
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}
-\frametitle{Power analysis assumptions}
 
-\begin{itemize}
-\item N = 535 (federal) and 1000 (state)
-\vspace{0.5cm}
-\item Low quality evidence + information provision = \textcolor{BrickRed}{-10\%}
-\item High quality evidence + no information provision = \textcolor{Emerald}{+5\%}
-\item High quality evidence + information provision = \textcolor{LimeGreen}{+12.5\%}
-\vspace{0.5cm}
-\item Standard deviation = 0.08
-\end{itemize}
-
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Conclusion}
 
 \begin{frame}
-\frametitle{Questions}
+\frametitle{Timeline and questions}
 \begin{itemize}
+\item \textcolor{Cerulean}{Ideal timeline}: pre-registration and initial contact with 3rd party organization by end of 2019, roll-out of the experiment in the first half of 2020 (political context)
 \item Use a \textcolor{Cerulean}{neutral or partisan policy} proposal?
 \begin{itemize}
 \item Partisan policy proposal might allow us to test legislator's motivated reasoning, but power issues.
@@ -307,13 +350,58 @@ Heterogenous treatment effects (CATEs)
 
 \section{Supplemental material}
 
+
+
+\begin{frame}[label= existing]
+\frametitle{Existing field/audit experimens}
+
+
+
+
+\begin{table}[]
+\caption{Audit experiments conducted with U.S. policy-makers}
+\label{tab:audit_experiments} 
+\bigbreak
+\tiny
+\begin{tabular}{|l|l|l|l|l|l|l|l|l|}
+\hline
+Reference      
+& Federal/State                                                                                                                        & Arms 
+& Treatment                                                                                                           
+& Design                                                                                                                                                        & Outcome 
+& 3rd party?                                                                                                                                                                                                                                                  \\ \hline
+ \citet{bergan2009does}        
+& \begin{tabular}[c]{@{}l@{}}State \\ (New Hampshire) \end{tabular}                                                  & 1
+& \begin{tabular}[c]{@{}l@{}} Contacted \\ by activists \end{tabular}                                           & \begin{tabular}[c]{@{}l@{}}Matched pairs \\ (multimembers districts)\\ Randomization within party\\ and district stratas\end{tabular}                         
+& Roll Call votes                                                                                            
+& \begin{tabular}[c]{@{}l@{}}Yes: coalition of \\ public health-related groups\\  organizing a grassroots email \\ lobbying campaign by activists\end{tabular}                                                                                              
+  \\ \hline
+ \citet{butler2011politicians}       & \begin{tabular}[c]{@{}l@{}}4,859 state legislators\\ (44 states)\end{tabular}                                                        & 2x3          & \begin{tabular}[c]{@{}l@{}}Black or \\ white name and\\ party (D/R/blank)\\ of email sender\end{tabular}            & \begin{tabular}[c]{@{}l@{}}Block randomization\\ by state, chamber, \\ party, and whether\\ legislator is up for \\ reelection\end{tabular}                   & \begin{tabular}[c]{@{}l@{}}Rate of response\\ to emails\end{tabular}                                       & No                                                                                                                                                                                                                                                          \\ \hline
+ \citet{kalla2016campaign}     & \begin{tabular}[c]{@{}l@{}}US Congress \\ 191 offices that had \\ not yet sponsored bill \end{tabular} & 1            & \begin{tabular}[c]{@{}l@{}}Reveal in email that\\ prospective attendees had\\ contributed to campaigns\end{tabular} & \begin{tabular}[c]{@{}l@{}}Blocks of 3 offices: closest\\ similarity on multiple \\ covariates\\ 1 treated, 2 control in each\\ of the 64 blocks\end{tabular} & \begin{tabular}[c]{@{}l@{}}Rate of response\\ to emails and\\ seniority of proposed\\ meeting\end{tabular} & \begin{tabular}[c]{@{}l@{}}Yes: liberal political organization \\ trying to set meetings between offices\\ and constituents who had previously \\ given to campaigns. \\ Goal of the meetings: rally support for \\ a bill banning a chemical.\end{tabular} 
+ \\ \hline
+  \citet{doberstein2017whom}     & \begin{tabular}[c]{@{}l@{}}1,108 \\ Canadian bureaucrats\end{tabular} & 2x2           & \begin{tabular}[c]{@{}l@{}}Source of the\\ policy information \\(academic, think tanks, \\ research-based \\advocacy groups) \end{tabular} & \begin{tabular}[c]{@{}l@{}}Sources in \\treatment groups \\ were falsified \\  Pre treatment survey\\ for covariates \end{tabular} & \begin{tabular}[c]{@{}l@{}} Credibility assessment of \\each of 5 research articles \\ Based on summaries \\ And ranking of the 5 articles \end{tabular} & \begin{tabular}[c]{@{}l@{}}No.\end{tabular} 
+   \\ \hline
+  \citet{zelizer2018responsive}     & \begin{tabular}[c]{@{}l@{}}18 bills \\ 76 state legislators \end{tabular} & 1          & \begin{tabular}[c]{@{}l@{}}Assigned to in-person\\ briefings by a \\ committee staffer \end{tabular} & \begin{tabular}[c]{@{}l@{}}Treatment assigned \\ at legislator-bill \\ dyad level \\ block RA \end{tabular} & \begin{tabular}[c]{@{}l@{}} Cosponsorship of bills \\ Roll-call votes \end{tabular} & \begin{tabular}[c]{@{}l@{}}No.\end{tabular} 
+     \\ \hline
+  \citet{butler2011can}     & \begin{tabular}[c]{@{}l@{}}New Mexico State House \\ 70 legislators \end{tabular} & 1          & \begin{tabular}[c]{@{}l@{}}Received district-specific \\survey results on \\constituents' opinions \\on a bill \end{tabular} & \begin{tabular}[c]{@{}l@{}}35 matched pairs \end{tabular} & \begin{tabular}[c]{@{}l@{}} Cosponsorship of bills \\ Roll-call votes \end{tabular} & \begin{tabular}[c]{@{}l@{}}Use of University Logo \\ And email from \\ own researchers' address\end{tabular} 
+       \\ \hline
+  \citet{butler2012field}     & \begin{tabular}[c]{@{}l@{}}489 legislatives offices \\ 23 states \\ 1,036 letters \end{tabular} & 2x4        & \begin{tabular}[c]{@{}l@{}}Received letter \\ ethnicity of sender varied \\ 2 ethnicities \\  type of letter varied \\ 4 types (policy vs service, \\ level of knowledge) \end{tabular} & \begin{tabular}[c]{@{}l@{}}35 matched pairs \end{tabular} & \begin{tabular}[c]{@{}l@{}} Rate of response \\ Roll-call votes \end{tabular} & \begin{tabular}[c]{@{}l@{}}Yes: actual individuals \\ 200 students at BYU \\ Opened post office boxes \\ in their hometown \end{tabular} \\
+\hline
+\end{tabular}
+\end{table}
+
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{frame}[label= doe_evidence]
 \frametitle{Evidence tiers}
 
 \only<1>{
 \begin{figure}
 \vspace{-0.25cm}
-\includegraphics[scale=0.75]{../figs/doe_tiers.png}
+\includegraphics[scale=0.53]{../figs/DoE_standards.png} 
 \end{figure}
 }
 
@@ -369,6 +457,26 @@ Heterogenous treatment effects (CATEs)
 \end{center}
 
 \end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}[label= other_agencies]
+\frametitle{Other federal evidence standards and databases}
+\scriptsize
+\begin{itemize}
+	\item Department of Labor (DoL)'s CLEAR's clearinghouse: evidence on on labor topics 
+	\item Corporation for National and Community Service (CNCS): evidence on what works in national service, social innovation, civic engagement, and volunteering
+	\item U.S. Agency for International Development (USAID), YouthPower:  evidence on what works in youth and peacebuilding, youth and health, youth and agriculture, food security, and nutrition
+	\item US Departments of Agriculture and Defense's ClearingHouse for military family readiness: evidence on wide-ranging family and mental health issues. 
+	\item US Department of Health and Human services: multiple databases on programs whose purpose is to prevent and/or reduce delinquency or other problem behaviors in young people, teen pregnancy and substance prevention programs, etc.
+	\item US Department of Justice: multiple databases on drugs and substance abuse, juveniles, crime and crime prevention, victims and victimization, law enforcement, technology and forensics, corrections and reentry, and courts
+\end{itemize}
+
+
+\end{frame}
+
+
+
 
 
 
