Changes to slides
Need to find a way to make the table fit in the sup materials

--- a/presentations/presentation_5.29.tex
+++ b/presentations/presentation_5.29.tex
@@ -83,7 +83,7 @@
     %\usepackage{bm} % For typesetting bold math (not \mathbold)
     %\logo{\includegraphics[height=0.6cm]{yourlogo.eps}}
 \title{Are legislators more responsive to high quality evidence? A field experiment}
-\author{Angèle Delevoye and Sōm Duchébaggè}
+\author{Angèle Delevoye, Trevor Incerti and Sōm Duchébaggè}
 
 \date{29 May 2019} 
 
@@ -94,6 +94,23 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Introduction}
+
+
+\begin{frame}
+\frametitle{Evidence-based policymaking: a bipartisan goal}
+
+\begin{columns}
+\column{0.5\textwidth}
+\includegraphics[scale=0.35]{{"../figs/bill text"}.png} 
+
+\column{0.3\textwidth}
+\includegraphics[scale=0.35]{{"../figs/bill adoption"}.png} 
+
+
+\end{columns}
+
+
+\end{frame}
 
 \begin{frame}
 \frametitle{Research Questions}
@@ -129,11 +146,11 @@
 \begin{itemize}
 \item Evidence standards and descriptions already adopted in federal legislation.
 \begin{itemize}
-\item Secondary Education Act 65, No Child Left Behind 01, Every Student Succeeds Act 2015
+\item Secondary Education Act 65, No Child Left Behind 01, Every Student Succeeds Act 2015 (ESSA)
 \end{itemize}
 \pause
 \vspace{0.5cm}
-\item Department of Education (DoE) standards under ESSA 2015:
+\item Department of Education (DoE) standards tiers under ESSA 2015:
 \begin{itemize}
 \item Strong causal evidence
 \item Moderate causal evidence
@@ -211,11 +228,11 @@
 \begin{frame}
 \frametitle{Treatment 2, Information on evidence standards}
 \scriptsize
-From DoL's CLEAR database:
+\underline{From DoL's CLEAR database:}
 \bigbreak
-\textit{"High Causal Evidence standards mean there is strong evidence that the effects estimated in this study are solely attributable to the intervention being examined. This does not necessarily mean that the study found positive impacts, only that the analysis meets high methodological standards and the causal impacts estimated, whether positive, negative, or null, are credible. Currently, only well-implemented randomized controlled trials can receive this rating"}
+\textit{"\textcolor{Cerulean}{High Causal Evidence standards} mean there is strong evidence that the effects estimated in this study are solely attributable to the intervention being examined. This does not necessarily mean that the study found positive impacts, only that the analysis meets high methodological standards and the causal impacts estimated, whether positive, negative, or null, are credible. Currently, only \textcolor{Cerulean}{well-implemented randomized controlled trials} can receive this rating"}
 
-\textit{"Low Causal Evidence standards mean there is little evidence that the effects estimated in the study are attributable to the intervention being examined, and other factors are likely to have contributed to the results. This does not imply that the study's results are not useful for some purposes, but they should be interpreted with caution. Causal studies that do not meet criteria for a high or moderate evidence rating receive this rating."}
+\textit{"\textcolor{Cerulean}{Low Causal Evidence standards} mean there is little evidence that the effects estimated in the study are attributable to the intervention being examined, and other factors are likely to have contributed to the results. This does not imply that the study's results are not useful for some purposes, but they should be \textcolor{Cerulean}{interpreted with caution}. Causal studies that do not meet criteria for a high or moderate evidence rating receive this rating."}
 
 \end{frame}
 
@@ -464,12 +481,12 @@ Reference
 \frametitle{Other federal evidence standards and databases}
 \scriptsize
 \begin{itemize}
-	\item Department of Labor (DoL)'s CLEAR's clearinghouse: evidence on on labor topics 
-	\item Corporation for National and Community Service (CNCS): evidence on what works in national service, social innovation, civic engagement, and volunteering
-	\item U.S. Agency for International Development (USAID), YouthPower:  evidence on what works in youth and peacebuilding, youth and health, youth and agriculture, food security, and nutrition
-	\item US Departments of Agriculture and Defense's ClearingHouse for military family readiness: evidence on wide-ranging family and mental health issues. 
-	\item US Department of Health and Human services: multiple databases on programs whose purpose is to prevent and/or reduce delinquency or other problem behaviors in young people, teen pregnancy and substance prevention programs, etc.
-	\item US Department of Justice: multiple databases on drugs and substance abuse, juveniles, crime and crime prevention, victims and victimization, law enforcement, technology and forensics, corrections and reentry, and courts
+	\item \textcolor{Cerulean}{Department of Labor} (DoL)'s CLEAR's clearinghouse: evidence on on labor topics 
+	\item \textcolor{Cerulean}{Corporation for National and Community Service} (CNCS): evidence on what works in national service, social innovation, civic engagement, and volunteering
+	\item \textcolor{Cerulean}{U.S. Agency for International Development} (USAID), YouthPower:  evidence on what works in youth and peacebuilding, youth and health, youth and agriculture, food security, and nutrition
+	\item \textcolor{Cerulean}{US Departments of Agriculture and Defense}'s ClearingHouse for military family readiness: evidence on wide-ranging family and mental health issues. 
+	\item \textcolor{Cerulean}{US Department of Health and Human services}: multiple databases on programs whose purpose is to prevent and/or reduce delinquency or other problem behaviors in young people, teen pregnancy and substance prevention programs, etc.
+	\item \textcolor{Cerulean}{US Department of Justice}: multiple databases on drugs and substance abuse, juveniles, crime and crime prevention, victims and victimization, law enforcement, technology and forensics, corrections and reentry, and courts
 \end{itemize}
 
 
